Fixed issue with writen (changed sizeof(buff) to strlen(buff))

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/${fileBasenameNoExtension}",
+            "program": "${workspaceFolder}/tcp_server",
             "args": ["1111"],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
